# programmer

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  compute.py  console.py  fetch_data.py  pyproject.toml  release.sh  requirements-dev.txt  tools.py  ui.py
.github/workflows/: pyright.yml  test.yml
dev-notebooks/: BadPatchExperiment.ipynb
docs/design/: file_line_tools.md  git_integration_rework.md  settings_management.md  weave_query_ref_expansion.md
docs/dev/: devlog-shawn.md
programmer/: __init__.py  agent.py  agent_texteditor.py  agent_texteditor_o1.py  config.py  console.py  edits.py  environment.py  evaluate.py  file_protocol.py  git.py  io_context.py  programmer-swebench.py  programmer.py  settings_manager.py  text_editor.py  tool_calling.py  tools.py
programmer-ui/: page_playground.py  page_sessions.py  page_swebench.py  ui.py  weave_project_picker.py  weave_streamlit.py
programmer/container-server/: README.md
programmer/containerserver/: README.md  checkserver.py  cmserver.py  openapi.json
programmer/evals/: eval_repeated_edits.py
programmer/func/: choose.py  decompose.py  func.py  llm.py  plan.py  prompt.py  run_examples.py  strategy.py
programmer/swe-bench/: README.md  checkserver.py  cmserver.py  code.patch  problem.txt  (+3 more)
ts/: actor.ts  agent.ts  complexGame.ts  containerServerApi.ts  envAgent.ts  envShell.ts  envShellPatch.ts  environment.ts  fn.ts  gen_container_api.sh  ioContext.ts  llm.ts  llmPlaySimpleGame.ts  package-lock.json  package.json  runEnv.ts  simpleGame.ts  strategy.ts  swebench.ts  trajectory.ts  tsconfig.json
(+28 files in other folders)
